--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Obj/
 UnityGenerated/
 Library/
 Assets/AssetStoreTools*
+Builds/
 
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
